package structural._2_proxy.program;

public interface Program {
	void loadToMemory();
}
